# integration-automation-patterns

./: .gitignore  ADOPTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ECOSYSTEM.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.venv_test/: pyvenv.cfg
.venv_test2/: pyvenv.cfg
docs/: agentic-security-trends-2026.md  api-reference.md  architecture.md  getting-started.md  implementation-note-01.md  implementation-note-02.md  implementation-note-03.md  implementation-note-04.md  implementation-note-05.md  implementation-note-06.md  implementation-note-07.md  implementation-note-08.md  implementation-note-09.md  implementation-note-10.md  implementation-note-11.md  implementation-note-12.md
examples/: 01_event_envelope_retry.py  02_transactional_outbox.py  03_saga_compensation.py  04_crm_erp_sync_boundary.py  05_idempotent_crm_update.py  06_end_to_end_integration.py  07_cqrs_event_sourcing.py  08_approval_workflow.py  09_backpressure_retry.py  10_schema_evolution.py  11_process_manager.py  12_event_streaming_windows.py  13_distributed_cache_patterns.py  14_api_gateway_patterns.py  15_saga_orchestration_patterns.py  16_event_sourcing_cqrs.py  17_resilience_patterns.py  18_message_routing_patterns.py  19_workflow_orchestration_patterns.py  20_data_pipeline_patterns.py  21_api_gateway_patterns.py  22_event_sourcing_cqrs_patterns.py  23_service_mesh_resilience.py  24_distributed_tracing_patterns.py  25_schema_registry_patterns.py  26_graphql_patterns.py  27_event_driven_workflow_patterns.py  28_grpc_streaming_patterns.py  29_async_concurrent_patterns.py  30_message_broker_patterns.py  31_service_discovery_patterns.py  32_observability_patterns.py  33_data_pipeline_patterns.py  34_distributed_transaction_patterns.py  35_event_sourcing_advanced.py  36_workflow_state_machine.py  37_rate_limiting_patterns.py  38_reactive_streams_patterns.py  39_distributed_tracing_patterns.py  40_saga_choreography_patterns.py  (+5 more)
tests/: test_39_distributed_tracing_patterns.py  test_40_saga_choreography_patterns.py  test_agentic_security_auditor.py  test_api_gateway_patterns.py  test_api_versioning_patterns.py  test_async_concurrent_patterns.py  test_async_patterns.py  test_broker_envelopes.py  test_data_pipeline_patterns.py  test_distributed_cache_patterns.py  test_distributed_tracing_patterns.py  test_distributed_transaction_patterns.py  (+27 more)
(+38 files in other folders)
